packs/stable/org-pack/lib/org-mode/testing/examples/ob-lilypond-test.error
Processing `xxx'
Parsing...
/path/to/tangled/file/test.ly:25:0: error: syntax error, unexpected \score, expecting '='

\score {
Interpreting music... [8][16][24][32]
Preprocessing graphical objects...
Interpreting music... 
MIDI output to `xxx'
Finding the ideal number of pages...
Fitting music on 2 or 3 pages...
Drawing systems...
Layout output to `xxx'
Converting to `xxx'...
error: failed files: "/Path/to/tangled/file/test.ly/example.ly"
